// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="lust-select"
  >
    <button
      aria-controls="lust-select-list"
      aria-haspopup="true"
      class="lust-select__label"
      data-testid="LustSelectButton"
    >
      <p
        class="kust-text lust-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="lust-select__caret lust-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="lust-select__dropdown "
      id="lust-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Option 1"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 1
        </p>
      </li>
      <li
        aria-label="Option 2"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 2
        </p>
      </li>
      <li
        aria-label="Option 3"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 3
        </p>
      </li>
      <li
        aria-label="Option 4"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 4
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="lust-select"
  >
    <button
      aria-controls="lust-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="lust-select__label"
      data-testid="LustSelectButton"
    >
      <p
        class="kust-text lust-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="lust-select__caret lust-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      class="lust-select__dropdown lust-select__dropdown--open"
      id="lust-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Option 1"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 1
        </p>
      </li>
      <li
        aria-label="Option 2"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 2
        </p>
      </li>
      <li
        aria-label="Option 3"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 3
        </p>
      </li>
      <li
        aria-label="Option 4"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 4
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="lust-select"
  >
    <button
      aria-controls="lust-select-list"
      aria-haspopup="true"
      class="lust-select__label"
      data-testid="LustSelectButton"
    >
      <p
        class="kust-text lust-text-base"
      >
        Option 1
      </p>
      <svg
        class="lust-select__caret lust-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="lust-select__dropdown "
      id="lust-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-checked="true"
        aria-label="Option 1"
        class="lust-select__option
                                lust-select__option--selected
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 1
        </p>
        <svg
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1rem"
        >
          <path
            d="M5 13l4 4L19 7"
          />
        </svg>
      </li>
      <li
        aria-label="Option 2"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 2
        </p>
      </li>
      <li
        aria-label="Option 3"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 3
        </p>
      </li>
      <li
        aria-label="Option 4"
        class="lust-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="kust-text lust-text-base"
        >
          Option 4
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
